Update (reports): amplía principal interno con ROLE_REPORTS_SERVICE y ROLE_ADMIN
El modo X-Internal-Token del Audit solo asignaba ROLE_CORE_SERVICE
al principal autenticado. Esto bastaba para los POSTs del Core a
/api/v1/historial, pero bloqueaba con 403 al Reports Service cuando
hacía GET a /api/v1/historial/tag/{id} (que requiere SUPERVISOR
o ADMIN).

Ahora el principal interno tiene 3 roles:
- ROLE_CORE_SERVICE (compatibilidad con los POSTs existentes)
- ROLE_REPORTS_SERVICE (semántico, identifica al consumidor)
- ROLE_ADMIN (satisface los @PreAuthorize de los controllers sin
  tener que modificarlos uno por uno)

Email cambia de core-service@internal a internal-service@internal
porque ahora el principal sirve a más de un consumidor.